# project-agent

./: .env.example  .gitignore  AutoMemory.md  CLAUDE.md  ContexManagement.md  Multi-Agents.md  PERMISSIONS.md  README.md  SKILL.md  claude-code-python-roadmap.md  java-agent-second-brain-social-twin-plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md  development.md
examples/: basic_config.toml  minimal_plugin.py
reference/: 04c-skill.md  04c-skills-implementation.md  04d-mcp-implementation.md  Agent-Memory.md  Multi-Agent.md  mcp.md
reference/Contex_management/: 01-index.md  02-three-tiers.md  03-micro-compaction.md  04-auto-compaction.md  05-full-compaction.md  06-cache-aware.md  07-api-compaction.md  08-manual-compact.md  09-cost-analysis.md  10-best-practices.md
reference/memory_system/: 01-index.md  02-claude-md.md  03-auto-extraction.md  04-dual-model-retrieval.md  05-precision-first.md  06-kairos-dreaming.md  07-dream-distillation.md  08-memory-context.md  09-persistence.md  10-practice.md
reference/permission_and_security/: 01-index.md  02-six-modes.md  03-basic-modes.md  04-auto-mode.md
src/project_agent/: __init__.py  cli.py  config.py  errors.py  logging.py
tests/unit/: test_auto_compaction.py  test_cli.py  test_compaction_summary.py  test_config.py  test_context_budget.py  test_context_management_types.py  test_context_manager.py  test_errors.py  test_interfaces.py  test_mcp.py  test_memory_builder.py  test_memory_prompt.py  test_memory_recall.py  test_memory_store.py  test_model_clients.py  (+17 more)
(+52 files in other folders)
