[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-agent"
version = "0.1.0"
description = "Open-source Python CLI agent framework inspired by Claude Code."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wmq" }]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
project-agent = "project_agent.cli:main_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project_agent = ["py.typed", "skills/builtin/*/SKILL.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
